--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,3 +27,12 @@ body {
   top: calc(50% - 100px);
   left: calc(50% - 100px);
 }
+
+.btn-accele {
+  background: $warning-color;
+  border: none;
+  color: #fff;
+  &:active, &:hover, &:focus {
+    background: darken($warning-color, 10%);
+  }
+}
