--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,10 @@ body {
   background: $bg-color;
 }
 
+.container {
+  position: relative;
+}
+
 .btn-full {
   width: 100%;
 }
@@ -34,5 +38,23 @@ body {
   color: #fff;
   &:active, &:hover, &:focus {
     background: darken($warning-color, 10%);
+  }
+}
+
+.btn-mini.btn-action {
+  width: 3rem;
+  height: 3rem;
+  display: block;
+  position: fixed;
+  border-radius: 99px;
+  bottom: 1rem;
+  &.left {
+    left: 1rem;
+  }
+  &.right {
+    right: 1rem;
+  }
+  i {
+    font-size: 1.3rem;
   }
 }
